--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.6'
 	id 'io.spring.dependency-management' version '1.1.6'
-//	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
+	//id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 }
 
 group = 'com.bookin'
@@ -37,52 +37,24 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.2.0'
 
-	//validation
-	implementation "org.springframework.boot:spring-boot-starter-validation"
+	// validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-	//QueryDSL
-//	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
-//	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
-//	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
-//	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+	// Spring Security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	// JWT
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+	// QueryDSL
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
 	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
-}
 
-// Querydsl 설정부
-//sourceSets {
-//	main {
-//		java {
-//			srcDirs = ['src/main/java', 'src/main/generated']
-//		}
-//	}
-//}
-//
-//configurations {
-//	querydsl.extendsFrom compileClasspath
-//}
-//
-//compileQuerydsl {
-//	options.annotationProcessorPath = configurations.querydsl
-//}
-
-sourceSets {
-	main {
-		java {
-			srcDirs = ['src/main/java', 'src/main/generated']
-		}
-	}
-}
-
-tasks.withType(JavaCompile) {
-	options.annotationProcessorPath = configurations.annotationProcessor
-	options.generatedSourceOutputDirectory = file('src/main/generated')
-}
-
-clean {
-	delete file('src/main/generated')
+	implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
 }
 
 tasks.named('test') {
